--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,4 @@
-EXPO_TUNNEL_SUBDOMAIN=adhers-community
-EXPO_PACKAGER_HOSTNAME=https://adhers-community.preview.emergentagent.com
-EXPO_PUBLIC_BACKEND_URL=https://adhers-community.preview.emergentagent.com
+EXPO_TUNNEL_SUBDOMAIN=None
+EXPO_PACKAGER_HOSTNAME=https://None.preview.emergentagent.com
+EXPO_PUBLIC_BACKEND_URL=https://None.preview.emergentagent.com
 EXPO_USE_FAST_RESOLVER="1"
