--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,4 @@
-EXPO_TUNNEL_SUBDOMAIN=adhdsocial-chat-dev
-EXPO_PACKAGER_HOSTNAME=https://adhdsocial-fix.preview.emergentagent.com
-EXPO_PUBLIC_BACKEND_URL=http://localhost:8001
+EXPO_TUNNEL_SUBDOMAIN=None
+EXPO_PACKAGER_HOSTNAME=https://None.preview.emergentagent.com
+EXPO_PUBLIC_BACKEND_URL=https://None.preview.emergentagent.com
 EXPO_USE_FAST_RESOLVER="1"
