--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,4 @@
-EXPO_TUNNEL_SUBDOMAIN=adhd-connect
-EXPO_PACKAGER_HOSTNAME=https://adhd-connect.preview.emergentagent.com
-EXPO_PUBLIC_BACKEND_URL=https://adhd-connect.preview.emergentagent.com
+EXPO_TUNNEL_SUBDOMAIN=None
+EXPO_PACKAGER_HOSTNAME=https://None.preview.emergentagent.com
+EXPO_PUBLIC_BACKEND_URL=https://None.preview.emergentagent.com
 EXPO_USE_FAST_RESOLVER="1"
